[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"


[project]
name = "sustained"
version = "0.0.7"
description = "A Python query builder inspired by Objection.js"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "MIT"
license-files = [ "LICENSE",]
[[project.authors]]
name = "Christopher Wetherill"
email = "git@tbmh.org"

[project.urls]
Homepage = "https://github.com/wetherc/sustained"
Issues = "https://github.com/wetherc/sustained/issues"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
check_untyped_defs = true
exclude = [ "build/", "venv/",]

[tool.hatch.build.targets.wheel]
include = [
  "/src/sustained/**/*.pyi",
  "/src/sustained/py.typed",
]
