[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "sustained"
version = "1.0.1"
description = "A Python query builder inspired by Objection.js"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
license = "MIT"
license-files = [ "LICENSE",]
[[project.authors]]
name = "Christopher Wetherill"
email = "git@tbmh.org"

[project.urls]
Homepage = "https://github.com/wetherc/sustained"
Issues = "https://github.com/wetherc/sustained/issues"

[tool.isort]
profile = "black"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
strict = true
check_untyped_defs = true
exclude = [ "build/", "venv/",]

[tool.hatch.build]
dev-mode-dirs = [ "src",]
